--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 h1 {
 	margin: 0px;
 	max-width: 1140px;
-	background: url("/images/IMG_0184.JPG") 100%;
+	background: url("../images/IMG_0184.JPG") 100%;
 	background-size: 100% 100%;
 	max-height: 180px;
 	padding: 30px;
